# materials-decision-agent

./: .env.example  .gitignore  README.md  materials_decision_agent_spec_v0.2_lean.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  runtime.py
backend/app/agent/: agent.py  tooldefs.py
backend/app/data/: campaign.py
backend/app/science/: models.py  tools.py
backend/eval/: run_eval.py
configs/: data_manifest.yaml  llm_config.yaml  science_config.yaml
docs/: M0_AUDIT.md  REVIEW_M1.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: AgentZone.tsx  CampaignZone.tsx  ModelZone.tsx
